Selecting points and strokes with shift inside GP object toggles selection of object itself #105339

Closed
opened 2023-03-01 13:10:43 +07:00 by MichailSoluyanov · 1 comments

System Information
Operating system: Linux-5.19.0-32-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: NVIDIA GeForce RTX 4080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.78.01

Blender Version
Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: rB55485cb379f7
Worked: (newest version of Blender that worked as expected)

Short description of error
Selecting points and strokes with shift inside GP object toggles selection of object itself
Peek 2023-03-01 15-05.gif

Exact steps for others to reproduce the error
You can use this file to test:
GP test.blend

Enter edit mode and try to select multiple elements (points or strokes) using Shift.

**System Information** Operating system: Linux-5.19.0-32-generic-x86_64-with-glibc2.35 64 Bits Graphics card: NVIDIA GeForce RTX 4080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 525.78.01 **Blender Version** Broken: version: 3.4.1, branch: blender-v3.4-release, commit date: 2022-12-19 17:00, hash: `rB55485cb379f7` Worked: (newest version of Blender that worked as expected) **Short description of error** Selecting points and strokes with shift inside GP object toggles selection of object itself ![Peek 2023-03-01 15-05.gif](/attachments/515422d6-c623-49b9-a850-44b7a230c9c7) **Exact steps for others to reproduce the error** You can use this file to test: [GP test.blend](/attachments/38fbcd46-8a1a-4c7d-bb1f-e34d3c4e83d9) Enter edit mode and try to select multiple elements (points or strokes) using Shift.
MichailSoluyanov added the
Priority
Normal
Status
Needs Triage
Type
Report
labels 2023-03-01 13:10:44 +07:00

Can confirm, will check.

Can confirm, will check.
Philipp Oeser added
Status
Confirmed
Module
Grease Pencil
and removed
Status
Needs Triage
labels 2023-03-01 13:18:55 +07:00
Philipp Oeser added the
Interest
User Interface
label 2023-03-01 15:28:29 +07:00
Philipp Oeser self-assigned this 2023-03-01 15:28:37 +07:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-03-02 09:52:50 +07:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#105339
There is no content yet.